<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.wing.java</groupId>
    <artifactId>java-util</artifactId>
    <version>2.1.7</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>com.wing.java</groupId>
        <artifactId>java-spring-boot-parent</artifactId>
        <version>2.1.7</version>
    </parent>

    <modules>
        <module>util-base</module>
        <module>util-arch</module>
        <module>util-code-generator</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <!-- 这种方式不能管理 plugin版本
        <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.wing.java</groupId>
                <artifactId>java-spring-boot-parent</artifactId>
                <version>2.1.7</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>-->
</project>